--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "express": "^5.2.1",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-static-copy": "^3.2.0"
   }
 }
